--- a/src/app/email/email.component.scss
+++ b/src/app/email/email.component.scss
@@ -6,7 +6,7 @@
     //width: 100%;
     background-color: #CEE0DC;
     border-radius: 20px;
-    
+    overflow: hidden;
 }
 
 .btn {
